--- a/optimizer/templates/home/home.html
+++ b/optimizer/templates/home/home.html
@@ -14,9 +14,7 @@
 </form>
 
 <br><br>
-Go to <a href="/page">progress bar</a>
-<br><br>
+Run the <a href="/run">optimizer</a>
 
-<p> <a href="/jstutorial">JavaScript Tutorial</a> </p>
 
 {% endblock %}
