--- a/optimizer/templates/progress/progress.html
+++ b/optimizer/templates/progress/progress.html
@@ -4,17 +4,17 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="static/javascript/progress.js"></script>
+    <script src="static/javascript/progress.js">
+    // reference static/javascript/progress.js for the EventSource that updates the progress bar
+    </script>
 </head>
 <body>
     <div class="progress" style="width: 50%; margin: 50px;">
         <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
     </div>
     <script>
-        // A $( document ).ready() block.
         $( document ).ready(function() {
             alert("Wait till the progress bar runs!!");
-            //window.location.replace("http://stackoverflow.com");
         });
     </script>
 </body>
