--- a/optimizer/templates/ga/ga.html
+++ b/optimizer/templates/ga/ga.html
@@ -10,7 +10,7 @@
     </ol>
 
     {% from "_formhelpers.html" import render_field %}
-    <form method="post" action="/results">
+    <form method="post" action="/progress">
     <dl>
         {{ render_field(form.directory) }}
         {{ render_field(form.bills) }}
